# CHICKEN_DISEASE_DL_PROJECT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scores.json  template.py
dl_project/artifacts_mgr/: artifact_config.py  artifact_entity.py  artifact_generator.py
dl_project/base/: exceptions.py  logger.py
dl_project/components/: data_ingestion.py  model_evaluation.py  model_trainer.py  prepare_base_model.py
dl_project/constants/: constants.py
dl_project/pipelines/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_trainer.py  stage_04_model_evaluation.py
dl_project/utils/: utils.py
